k8s/base/intake/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: intake
spec:
  type: ClusterIP
  selector:
    app: intake
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
